--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                 <div class="col-md-8 col-sm-8">
 
                     <!-- CONTACT FORM HERE -->
-                    <form id="contact-form" action="https://formspree.io/sirbeejay1@gmail.com" method="POST">
+                    <form id="contact-form" action="https://formspree.io/mailtobolaji@gmail.com" method="POST">
 			<input type="hidden" name="_subject" value="Message to Bolaji Ayodeji" />
                         <div class="col-md-12 col-sm-12">
                             <input type="text" name="name" class="form-control" placeholder="Full Name" id="cf-name" required="required">
@@ -592,6 +592,33 @@
 
                     </form>
                 </div>
+		    
+		    <div class="col-md-12 col-sm-12">
+			    <div class="container">
+				    <div class="row">
+					    <ul class="social-icon">
+                                <li>
+                                    <a href="https://facebook.com/iambolajiayo" class="fa fa-facebook-square" attr="facebook icon"></a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/iambolajiayo" class="fa fa-twitter"></a>
+                                </li>
+                                <li>
+                                    <a href="https://instagram.com/iambolajiayo" class="fa fa-instagram"></a>
+                                </li>
+                                <li>
+                                    <a href="https://linkedin/in/iambolajiayo" class="fa fa-linkedin"></a>
+                                </li>
+                                <li>
+                                    <a href="https://github.com/bolajiayodeji" class="fa fa-github"></a>
+                                </li>
+                                <li>
+                                    <a href="https://codepen.io/iambolajiayo" class="fa fa-codepen"></a>
+                                </li>
+                            </ul>
+				    </div>
+			    </div>
+		    </div>
 
                 <div class="col-md-4 col-sm-4">
                     <div class="google-map">
@@ -615,8 +642,9 @@
                         <h3>Ready to start your project with me?</h3>
                         <p>Do contact me:</p> <br />
                         <p><i class="fa fa-phone"></i> (+234) 8109445504</p>
-                        <p><i class="fa fa-envelope"></i> Sirbeejay1@gmail.com</p>
-                        <p><i class="fa fa-paper-plane"></i> Use the message bot <i class="fa fa-arrow-right"></i></p>
+                        <p><i class="fa fa-envelope"></i> mailtobolaji@gmail.com</p>
+			<p><i class="fa fa-envelope"></i> sirbeejay1@gmail.com</p>
+                        <p><i class="fa fa-paper-plane"></i> Use the chat bot <i class="fa fa-arrow-right"></i></p>
                     </div>
                 </div>
 
@@ -639,10 +667,10 @@
                         <h2>Services</h2>
                         <ul class="footer-link">
                             <p> Web Design </p>
-                            <p> UI/UX Design </p>
-                            <p> Content Writing </p>
+                            <p> Content Management </p>
                             <p> Digital Marketing </p>
-                            <p> Photographty </p>
+                            <p> Photography </p>
+			    <p> UI/UX Design </p>
                         </ul>
                     </div>
                 </div>
