--- a/index.html
+++ b/index.html
@@ -607,24 +607,27 @@
 		    <div class="col-md-12 col-sm-12">
 			    <div class="container">
 				    <div class="row">
-					    <ul class="social-icon">
+					    <ul>
                                 <li>
-                                    <a href="https://facebook.com/iambolajiayo" class="fa fa-facebook-square" attr="facebook icon"></a>
+                                    <a href="https://facebook.com/iambolajiayo" class="fa fa-facebook-square fa-3x" attr="facebook icon"></a>
                                 </li>
                                 <li>
-                                    <a href="https://twitter.com/iambolajiayo" class="fa fa-twitter"></a>
+                                    <a href="https://twitter.com/iambolajiayo" class="fa fa-twitter fa-3x"></a>
                                 </li>
                                 <li>
-                                    <a href="https://instagram.com/iambolajiayo" class="fa fa-instagram"></a>
+                                    <a href="https://instagram.com/iambolajiayo" class="fa fa-instagram fa-3x"></a>
                                 </li>
                                 <li>
-                                    <a href="https://linkedin/in/iambolajiayo" class="fa fa-linkedin"></a>
+                                    <a href="https://linkedin/in/iambolajiayo" class="fa fa-linkedin fa-3x"></a>
+                                </li>
+			        <li>
+                                    <a href="https://www.youtube.com/channel/UCpFxuQyjQYal738TW0TJUNw" class="fa fa-youtube fa-3x"></a>
                                 </li>
                                 <li>
-                                    <a href="https://github.com/bolajiayodeji" class="fa fa-github"></a>
+                                    <a href="https://github.com/bolajiayodeji" class="fa fa-github fa-3x"></a>
                                 </li>
                                 <li>
-                                    <a href="https://codepen.io/iambolajiayo" class="fa fa-codepen"></a>
+                                    <a href="https://codepen.io/iambolajiayo" class="fa fa-codepen fa-3x"></a>
                                 </li>
                             </ul>
 				    </div>
