--- a/index.html
+++ b/index.html
@@ -608,25 +608,25 @@
 			    <div class="container">
 				    <div class="row">
 					    <ul>
-                                <li style="display: inline-block; list-style: none;">
+                                <li style="display: inline-block; list-style: none; margin-right: 30px;">
                                     <a href="https://facebook.com/iambolajiayo" class="fa fa-facebook-square fa-3x" attr="facebook icon"></a>
                                 </li>
-                                <li style="display: inline-block; list-style: none;">
+                                <li style="display: inline-block; list-style: none; margin-right: 30px;">
                                     <a href="https://twitter.com/iambolajiayo" class="fa fa-twitter fa-3x"></a>
                                 </li>
-                                <li style="display: inline-block; list-style: none;">
+                                <li style="display: inline-block; list-style: none; margin-right: 30px;">
                                     <a href="https://instagram.com/iambolajiayo" class="fa fa-instagram fa-3x"></a>
                                 </li>
-                                <li style="display: inline-block; list-style: none;">
+                                <li style="display: inline-block; list-style: none; margin-right: 30px;">
                                     <a href="https://linkedin/in/iambolajiayo" class="fa fa-linkedin fa-3x"></a>
                                 </li>
-			        <li style="display: inline-block; list-style: none;">
+			        <li style="display: inline-block; list-style: none; margin-right: 30px;">
                                     <a href="https://www.youtube.com/channel/UCpFxuQyjQYal738TW0TJUNw" class="fa fa-youtube fa-3x"></a>
                                 </li>
-                                <li style="display: inline-block; list-style: none;">
+                                <li style="display: inline-block; list-style: none; margin-right: 30px;">
                                     <a href="https://github.com/bolajiayodeji" class="fa fa-github fa-3x"></a>
                                 </li>
-                                <li style="display: inline-block; list-style: none;">
+                                <li style="display: inline-block; list-style: none; margin-right: 30px;">
                                     <a href="https://codepen.io/iambolajiayo" class="fa fa-codepen fa-3x"></a>
                                 </li>
                             </ul>
