--- a/index.html
+++ b/index.html
@@ -609,6 +609,9 @@
 				    <div class="row">
 					    <br /><br /><br/ ><br />
 					    <ul>
+				<li style="display: inline-block; list-style: none; margin-right: 30px;">
+                                    <a href="mailto:mailtobolaji@gmail.com" class="fa fa-envelope fa-3x"></a>
+                                </li>
                                 <li style="display: inline-block; list-style: none; margin-right: 30px;">
                                     <a href="https://facebook.com/iambolajiayo" class="fa fa-facebook-square fa-3x" attr="facebook icon"></a>
                                 </li>
@@ -629,6 +632,15 @@
                                 </li>
                                 <li style="display: inline-block; list-style: none; margin-right: 30px;">
                                     <a href="https://codepen.io/iambolajiayo" class="fa fa-codepen fa-3x"></a>
+                                </li>
+		                <li style="display: inline-block; list-style: none; margin-right: 30px;">
+                                    <a href="https://dribbble.com/iambolajiayo" class="fa fa-dribbble fa-3x"></a>
+                                </li>
+				<li style="display: inline-block; list-style: none; margin-right: 30px;">
+                                    <a href="https://behance.net/iambolajiayo" class="fa fa-behance fa-3x"></a>
+                                </li>
+				<li style="display: inline-block; list-style: none; margin-right: 30px;">
+                                    <a href="https://medium.com/@bolajiayodeji" class="fa fa-medium fa-3x"></a>
                                 </li>
                             </ul>
 				    </div>
