--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
                 <div class="col-md-4 col-sm-12">
                     <div class="about-image">
-                        <img src="images/about-image.jpg" class="img-responsive" alt="My Picture">
+                        <img src="images/profile.jpg" class="img-responsive" alt="My Picture">
                         <br /><br /><br /><br /><br /><br /><br /><br />
                     </div>
                 </div>
