--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                         </div>
 
                         <div class="col-md-4 col-sm-6">
-                            <input type="submit" class="form-control" name="submit" value="send">
+                            <input type="submit" class="form-control" name="submit" value="SEND MESSAGE">
                         </div>
                         <div class="col-md-2 col-sm-4">
                             <input type="reset" class="form-control" name="reset" value="CLEAR">
