--- a/resume.html
+++ b/resume.html
@@ -79,12 +79,12 @@
                     <span class="text-big">Ayodeji</span>
                 </h1>
                 <div class="subheading mb-5">Lokoja, Kogi State, Nigeria | <a href=""><i class="fa fa-phone"></i> (+234) 8109445504</a> |
-                    <a href="mailto:Sirbeejay1@gmail.com"><i class="fa fa-envelope"></i> Sirbeejay1@gmail.com</a>
+                    <a href="mailto:mailtobolaji@gmail.com"><i class="fa fa-envelope"></i> mailtobolaji@gmail.com</a>
                 </div>
                 <p class="mb-5 caption">I'm a Tech Geek, Front-end Developer, Favcoder, Photographer &amp; Content Writer.</p>
                 <ul class="list-inline list-social-icons mb-0">
                     <li class="list-inline-item">
-                        <a href="https://facebook.com/ayodeji.beejay">
+                        <a href="https://facebook.com/iambolajiayo">
                             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -92,7 +92,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://twitter.com/iambeejayayo">
+                        <a href="https://twitter.com/iambolajiayo">
                             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -100,7 +100,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://instagram.com/iambeejayayo">
+                        <a href="https://instagram.com/iambolajiayo">
                             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
@@ -108,7 +108,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://linkedin.com/in/iambeejayayo">
+                        <a href="https://linkedin.com/in/iambolajiayo">
                             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -124,7 +124,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://codepen.io/iambeejayayo">
+                        <a href="https://codepen.io/iambolajiayo">
                             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-codepen fa-stack-1x fa-inverse"></i>
@@ -140,7 +140,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://dribbble.com/iambeejayayo">
+                        <a href="https://dribbble.com/iambolajiayo">
                             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-dribbble fa-stack-1x fa-inverse"></i>
@@ -154,12 +154,26 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
             <div class="my-auto">
                 <h2 class="mb-5">Experience</h2>
+                
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
+                        <h3 class="mb-0">Chief Tech Support</h3>
+                        <div class="subheading mb-3">Youths Undefined</div>
+                        <p>I maintain web system performance by performing system monitoring and analysis, performance tuning;
+                           troubleshooting softwares, designing and escalating application problems to vendor.
+                           Website development, digital marketing and customer service development using chatbots.
+                        </p>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">August 2018 - Present</span>
+                    </div>
+                </div>
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Student Ambassador</h3>
                         <div class="subheading mb-3">Favcode54</div>
-                        <p>Spreading the fire of tech thereby contributing to the African Tech Ecosystem
+                        <p>Spreading the fire of technology thereby contributing to the African tech ecosystem
                             <br /> Organizing meet-ups, hackathons backed by <a href="https://favcode54.org">Favcode54</a>
                             <br /> Favcode54 Envangelism
                         </p>
