--- a/resume.html
+++ b/resume.html
@@ -5,11 +5,11 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Resume - Bolaji Ayodeji">
     <meta name="author" content="Bolaji Ayodeji">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="resume/img/favicon.ico">
+    <link rel="shortcut icon" href="resume/img/fav.png">
 
     <title>Resume - Bolaji Ayodeji</title>
 
@@ -34,12 +34,13 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Bolaji Ayodeji - The Geek</span>
             <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="resume/img/profile.jpg" alt="">
-        </span>
+                <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="resume/img/profile.jpg" alt="">
+            </span>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -49,13 +50,15 @@
                     <a class="nav-link js-scroll-trigger" href="#experience"><i class="fa fa-briefcase"></i> Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#education"><i class="fa fa-graduation-cap"></i> Education</a>
+                    <a class="nav-link js-scroll-trigger" href="#education"><i class="fa fa-graduation-cap"></i>
+                        Education</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#skills"><i class="fa fa-code"></i> Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#interests"> <i class="fa fa-handshake-o"></i> Interests</a>
+                    <a class="nav-link js-scroll-trigger" href="#interests"> <i class="fa fa-handshake-o"></i>
+                        Interests</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#awards"> <i class="fa fa-certificate"></i> Awards</a>
@@ -78,73 +81,75 @@
                 <h1 class="mb-0">Bolaji
                     <span class="text-big">Ayodeji</span>
                 </h1>
-                <div class="subheading mb-5">Lokoja, Kogi State, Nigeria | <a href=""><i class="fa fa-phone"></i> (+234) 8109445504</a> |
+                <div class="subheading mb-5">Lokoja, Kogi State, Nigeria | <a href=""><i class="fa fa-phone"></i>
+                        (+234) 8109445504</a> |
                     <a href="mailto:mailtobolaji@gmail.com"><i class="fa fa-envelope"></i> mailtobolaji@gmail.com</a>
                 </div>
-                <p class="mb-5 caption">I'm a Tech Geek, Front-end Developer, Favcoder, Photographer &amp; Content Writer.</p>
+                <p class="mb-5 caption">I'm a Tech Geek, Front-end Developer, Favcoder, Photographer &amp; Content
+                    Writer.</p>
                 <ul class="list-inline list-social-icons mb-0">
                     <li class="list-inline-item">
                         <a href="https://facebook.com/iambolajiayo">
                             <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-              </span>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                            </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://twitter.com/iambolajiayo">
                             <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-              </span>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                            </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://instagram.com/iambolajiayo">
                             <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-              </span>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                            </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://linkedin.com/in/iambolajiayo">
                             <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-              </span>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                            </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://medium.com/@bolajiayodeji">
                             <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
-              </span>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
+                            </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://codepen.io/iambolajiayo">
                             <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-codepen fa-stack-1x fa-inverse"></i>
-              </span>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-codepen fa-stack-1x fa-inverse"></i>
+                            </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://github.com/bolajiayodeji">
                             <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-              </span>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                            </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://dribbble.com/iambolajiayo">
                             <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-dribbble fa-stack-1x fa-inverse"></i>
-              </span>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-dribbble fa-stack-1x fa-inverse"></i>
+                            </span>
                         </a>
                     </li>
                 </ul>
@@ -154,14 +159,15 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
             <div class="my-auto">
                 <h2 class="mb-5">Experience</h2>
-                
+
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Chief Tech Support</h3>
                         <div class="subheading mb-3">Youths Undefined</div>
-                        <p>I maintain web system performance by performing system monitoring and analysis, performance tuning;
-                           troubleshooting softwares, designing and escalating application problems to vendor.
-                           Website development, digital marketing and customer service development using chatbots.
+                        <p>I maintain web system performance by performing system monitoring and analysis, performance
+                            tuning;
+                            troubleshooting softwares, designing and escalating application problems to vendor.
+                            Website development, digital marketing and customer service development using chatbots.
                         </p>
                     </div>
                     <div class="resume-date text-md-right">
@@ -185,10 +191,26 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
+                        <h3 class="mb-0">Wordpress Developer</h3>
+                        <div class="subheading mb-3">Broadlane Groups</div>
+                        <p>Web development with great focus on Responsiveness &amp; stunning design.
+                            <br /> Content Management with wordpress
+                            <br /> Blog Creation &amp; Management
+                            <br /> Web Security
+                        </p>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">June 2018 - Present</span>
+                    </div>
+                </div>
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
                         <h3 class="mb-0">FAVCoder | Student</h3>
                         <div class="subheading mb-3">Favcode54</div>
                         <p>Online code school | Empowering Africa through Technology.
-                            <br /> FavCode54 is a non-profit initiative that aims to Teach, Mentor &amp; Build the next generation of African Software Developers
+                            <br /> FavCode54 is a non-profit initiative that aims to Teach, Mentor &amp; Build the next
+                            generation of African Software Developers
                         </p>
                     </div>
                     <div class="resume-date text-md-right">
@@ -334,8 +356,8 @@
                         <i class="devicons devicons-mysql"></i>
                     </li>
                     <li class="list-inline-item">
-                            <i class="devicons devicons-github"></i>
-                        </li>
+                        <i class="devicons devicons-github"></i>
+                    </li>
                 </ul>
 
                 <br />
@@ -353,8 +375,8 @@
                         <i class="fa-li fa fa-check"></i> Content Management &amp; Security</li>
                     <li>
                         <i class="fa-li fa fa-check"></i> Search Engine Optimization</li>
-                        <li>
-                                <i class="fa-li fa fa-check"></i> Digital Marketing</li>
+                    <li>
+                        <i class="fa-li fa fa-check"></i> Digital Marketing</li>
                 </ul>
             </div>
         </section>
@@ -362,8 +384,12 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
             <div class="my-auto">
                 <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a web developer, I enjoy most of my time surfing the internet, reading, travelling, singing, playing musical instruments <br /> (Acoustic Guitar, Piano), playing chess and photography.</p>
-                <p class="mb-0">I follow a number of sci-fi and fantasy genre movies and television shows, iam a big fan of The Silicon Valley and I spend a large amount of my free time exploring the latest technolgy advancements in the world.
+                <p>Apart from being a web developer, I enjoy most of my time surfing the internet, reading, travelling,
+                    singing, playing musical instruments <br /> (Acoustic Guitar, Piano), playing chess and
+                    photography.</p>
+                <p class="mb-0">I follow a number of sci-fi and fantasy genre movies and television shows, iam a big
+                    fan of The Silicon Valley and I spend a large amount of my free time exploring the latest technolgy
+                    advancements in the world.
                 </p>
             </div>
         </section>
@@ -378,8 +404,6 @@
                         <i class="fa-li fa fa-trophy text-warning"></i> Favcode54 certified Wordpress Developer</li>
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i> Favcode54 certified Web Developer</li>
-                        <li>
-                                <i class="fa-li fa fa-trophy text-warning"></i> Winner iHackAfrica Hackathon 2018</li>
 
                 </ul>
             </div>
@@ -390,7 +414,8 @@
 
     <!--Footer Section-->
     <footer class="text-center">
-        <p> <i class="fa fa-code"></i> with <i class="fa fa-heart text-danger"></i> &amp; <i class="fa fa-coffee text-secondary"></i> by <a href="https://bolajiayodeji.github.io">Bolaji Ayodeji</a></p>
+        <p> <i class="fa fa-code"></i> with <i class="fa fa-heart text-danger"></i> &amp; <i class="fa fa-coffee text-secondary"></i>
+            by <a href="https://bolajiayodeji.github.io">Bolaji Ayodeji</a></p>
     </footer>
 
     <!-- Bootstrap core JavaScript -->
