Fixed typo error

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <meta property="og:site_name" content="Bolaji Ayodeji - The Geek" />
     <meta property="og:type" content="Portfolio Website" />
 
-    !-- Google Knowledge Graph card -->
+    <!-- Google Knowledge Graph card -->
     <script type='application/ld+json'>
             {
               "@context": "http://www.schema.org",
