--- a/resume.html
+++ b/resume.html
@@ -81,7 +81,7 @@
                 <h1 class="mb-0">Bolaji
                     <span class="text-big">Ayodeji</span>
                 </h1>
-                <div class="subheading mb-5">Lokoja, Kogi State, Nigeria | <a href=""><i class="fa fa-phone"></i>
+                <div class="subheading mb-5">Nigeria | <a href=""><i class="fa fa-phone"></i>
                         (+234) 8109445504</a> |
                     <a href="mailto:mailtobolaji@gmail.com"><i class="fa fa-envelope"></i> mailtobolaji@gmail.com</a>
                 </div>
