--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
     <br />
     <div>
         <p>
-            <a href="index.html">&nbsp;<i class="fa fa-arrow-left"></i>Go Back Home</a>
+            <a href="https://bolajiayodeji.github.io/">&nbsp;<i class="fa fa-arrow-left"></i>Go Back Home</a>
         </p>
     </div>
     <div class="container-fluid p-0">
