--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta name="twitter:card" content="images/about-image.jpg">
     <meta name="description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
     <!-- Facebook card -->
-		<meta property="fb:admins" content="100018476377896" />
-		<meta property="fb:page_id" content="872194893169133" />
+    <meta property="fb:admins" content="100018476377896" />
+    <meta property="fb:page_id" content="872194893169133" />
     <!--Open Graph-->
     <meta property="og:image" content="images/about-image.jpg">
     <meta property="og:title" content="Bolaji Ayodeji - The Geek" />
@@ -143,8 +143,8 @@
             <!--COLUMN TWO-->
             <div class="col-md-6 col-sm-12">
                 <div class="home-info">
-                    <h1><i class="fa fa-black-tie"></i>&nbsp; Bolaji Ayodeji.</h1>
-                    <h1><i class="fa fa-code"></i> Front-end Developer</h1> <br />
+                    <h1><i class="fa fa-black-tie"></i>&nbsp; Hello, I'm Bolaji Ayodeji.</h1>
+                    <h1><i class="fa fa-code"></i> FRONT-END DEVELOPER</h1> <br />
                     <a href="#about" class="btn section-btn smoothScroll">Get Started</a>
                     <span>
                         CALL: +234 8109445504
