--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <!--COLUMN TWO-->
             <div class="col-md-6 col-sm-12">
                 <div class="home-info">
-                    <h1><i class="fa address-card"></i>&nbsp; Bolaji Ayodeji.</h1>
+                    <h1><i class="fa fa-fire"></i>&nbsp; Bolaji Ayodeji.</h1>
                     <h1><i class="fa fa-code"></i> FRONT-END DEVELOPER</h1> <br />
                     <a href="#about" class="btn section-btn smoothScroll">Get Started</a>
                     <span>
