Fixed map section

--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
     </footer>
 
     <!-- SCROLL TO TOP-->
-    <a style="text-decoration: none" class="scroll-to-top rounded smoothScroll" href="#home">
+    <a style="text-decoration: none" class="scroll-to-top smoothScroll" href="#home">
         <i class="fa fa-arrow-up"></i></a>
 
     <!-- SCRIPTS -->
