Removed move to top button

--- a/index.html
+++ b/index.html
@@ -940,9 +940,9 @@
         </div>
     </footer>
 
-    <!-- SCROLL TO TOP-->
+    <!-- SCROLL TO TOP 
     <a style="text-decoration: none" class="scroll-to-top smoothScroll" href="#home">
-        <i class="fa fa-arrow-up"></i></a>
+        <i class="fa fa-arrow-up"></i></a> -->
 
     <!-- SCRIPTS -->
     <script src="js/jquery.js"></script>
