Edited quick bio

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <li><a href="#about" class="smoothScroll"><i class="fa fa-user"></i> About Me</a></li>
                     <li><a href="#service" class="smoothScroll"><i class="fa fa-briefcase"></i> Services</a></li>
                     <li><a href="#portfolio" class="smoothScroll"><i class="fa fa-code"></i> Portfolio</a></li>
-                    <li><a href="#contact" class="smoothScroll"><i class="fa fa-address-book"></i> Hire Me Me</a></li>
+                    <li><a href="#contact" class="smoothScroll"><i class="fa fa-black-tie"></i> Hire Me</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
@@ -186,7 +186,10 @@
                             <h2>Quick Bio</h2>
                             <span class="line-bar">...</span>
                         </div>
-                        <p>Hello there! I'm Bolaji Ayodeji.</p>
+                        <p>Hello there! I'm Bolaji Ayodeji. <br />
+                        Chief Tech Support @<a target=_blank" href="https://youthsundefined.org">Youths Undefined</a> <br />
+                    Student Ambassador @<a target=_blank" href="https://favcode54.org">Favcode54</a> <br />
+                Campus Organizer @<a target="_blank" href="https://forloop.africa">forloop</a></p>
                         <p>I build and deploy softwares with great focus on stunning user interface, design,
                             optimization and security.</p>
                         <p>I'm passionate about developing and designing brilliant innovative products.</p> <br />
