--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </div>
     </section>
 
-    <div class="container">
+   <!-- <div class="container">
         <div class="row">
             <div class="col-md-12">
                     <h1 class="ml1">
@@ -257,7 +257,8 @@
                                       </h1>
             </div>
         </div>
-    </div>
+    </div> -->
+
     <hr />
 
     <!-- SERVICES -->
