--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                         <p>Hello there! I'm Bolaji Ayodeji. <br />
                         Chief Tech Support @<a target=_blank" href="https://youthsundefined.org">Youths Undefined</a> <br />
                     Student Ambassador @<a target=_blank" href="https://favcode54.org">Favcode54</a> <br />
-                Campus Organizer @<a target="_blank" href="https://forloop.africa">forLoop</a></p>
+                Campus Organizer @<a target="_blank" href="https://forloop.africa">forLoop</a></p> <br />
+			    Campus Ambassador @<a target="_blank" href="https://ingressive.co">Ingressive</a></p>
                         <p>I build and deploy softwares with great focus on stunning user interface, design,
                             optimization and security.</p>
                         <p>I'm passionate about developing and designing brilliant innovative products.</p> <br />
