--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
                 <a class="twitter-timeline" data-tweet-limit="3" data-link-color="#19CF86" href="https://twitter.com/iambolajiayo?ref_src=twsrc%5Etfw">Tweets
                     by iambolajiayo</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <a href="https://twitter.com/intent/tweet?screen_name=bolajiayodeji&ref_src=twsrc%5Etfw" class="twitter-mention-button"
-                    data-show-count="false">Tweet to @bolajiayodeji</a>
+                <a href="https://twitter.com/intent/tweet?screen_name=bolajiayodeji&ref_src=twsrc%5Etfw" data-text="Hello there, i so much love your website; the user interface is awesome. Welldone!!" class="twitter-mention-button"
+                    data-show-count="false">Love this site? Tweet to @bolajiayodeji</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <div class="col-md-6">
