--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </script>
 
 
-    <title>Bolaji Ayodeji - The Geek</title>
+    <title>BOLAJI - THE GEEK 🔥🚀</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Twitter Card-->
-    <meta name="twitter:title" content="Bolaji Ayodeji - The Geek">
+    <meta name="twitter:title" content="BOLAJI - THE GEEK 🔥🚀">
     <meta name="twitter:site" content="@iambolajiayodeji" />
     <meta name="twitter:creator" content="@iambolajiayodeji" />
     <meta name="twitter:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
@@ -32,11 +32,11 @@
     <meta property="fb:page_id" content="872194893169133" />
     <!--Open Graph-->
     <meta property="og:image" content="images/about-image.jpg">
-    <meta property="og:title" content="Bolaji Ayodeji - The Geek" />
+    <meta property="og:title" content="BOLAJI - THE GEEK 🔥🚀" />
     <meta property="og:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security." />
     <meta name="author" content="Bolaji Ayodeji">
     <meta property="og:url" content="https://bolajiayodeji.github.io" />
-    <meta property="og:site_name" content="Bolaji Ayodeji - The Geek" />
+    <meta property="og:site_name" content="BOLAJI - THE GEEK 🔥🚀" />
     <meta property="og:type" content="Portfolio Website" />
 
     <!-- Google Knowledge Graph card -->
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/magnific-popup.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="assets/nucleo/css/nucleo.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/devicons/1.8.0/css/devicons.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" />
 
@@ -104,17 +105,17 @@
                 </button>
 
                 <!-- lOGO TEXT HERE -->
-                <a href="index.html" class="navbar-brand"><i class="fa fa-fire"></i>&nbsp; Bolaji - The Geek</a>
+                <a href="index.html" class="navbar-brand"><i class="ni camera-compact"></i>&nbsp; Bolaji - The Geek</a>
             </div>
 
             <!-- MENU LINKS -->
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
-                    <li><a href="#home" class="smoothScroll"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#about" class="smoothScroll"><i class="fa fa-user"></i> About Me</a></li>
-                    <li><a href="#service" class="smoothScroll"><i class="fa fa-briefcase"></i> Services</a></li>
-                    <li><a href="#portfolio" class="smoothScroll"><i class="fa fa-code"></i> Portfolio</a></li>
-                    <li><a href="#contact" class="smoothScroll"><i class="fa fa-black-tie"></i> Hire Me</a></li>
+                    <li><a href="#home" class="smoothScroll"><i class="ni ni-building"></i> Home</a></li>
+                    <li><a href="#about" class="smoothScroll"><i class="ni ni-circle-08"></i> About Me</a></li>
+                    <li><a href="#service" class="smoothScroll"><i class="ni ni-briefcase-24"></i> Services</a></li>
+                    <li><a href="#portfolio" class="smoothScroll"><i class="ni ni-collection"></i> Portfolio</a></li>
+                    <li><a href="#contact" class="smoothScroll"><i class="ni ni-tie-bow"></i> Hire Me</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
@@ -187,15 +188,16 @@
                             <span class="line-bar">...</span>
                         </div>
                         <p>Hello there! I'm Bolaji Ayodeji. <br />
+                            OpenSource Advocate 🔥🚀 <br />
                             Chief Tech Support @<a target=_blank" href="https://youthsundefined.org">Youths Undefined</a>
                             <br />
                             Campus Ambassador @<a target="_blank" href="https://ingressive.co">Ingressive</a><br />
                             Student Ambassador @<a target=_blank" href="https://favcode54.org">Favcode54</a> <br />
                             Campus Organizer @<a target="_blank" href="https://forloop.africa">forLoop</a></p>
                         <p>I build and deploy softwares with great focus on stunning user interface, design,
-                            optimization and security.</p>
-                        <p>I'm passionate about developing and designing brilliant innovative products.<br />
-                        <p> I'm an Advocate for OpenSource Development</p> <br />
+                            optimization and security. 💡</p>
+                        <p>I'm passionate about developing and designing brilliant innovative products. ❤️<br />
+                        <p> I love helping bussinesses scale and flourish 😍</p> <br />
                         <a class="section-btn" href="resume.html">View Complete Resume <i class="fa fa-arrow-right"></i></a>
 
 
@@ -206,28 +208,28 @@
                     <div class="about-info skill-thumb">
 
                         <strong>Web Design</strong>
-                        <span class="pull-right"><i class="fa fa-desktop"></i> <i class="fa fa-mobile"></i></span>
+                        <span class="pull-right"><i class="ni ni-tv-2"></i></span>
                         <div class="progress">
                             <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuemin="0"
                                 aria-valuemax="100" style="width: 55%;"></div>
                         </div>
 
                         <strong>Photography</strong>
-                        <span class="pull-right"><i class="fa fa-camera"></i> <i class="fa fa-mobile"></i></span>
+                        <span class="pull-right"><i class="ni ni-camera-compact"></i></span>
                         <div class="progress">
                             <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuemin="0"
                                 aria-valuemax="100" style="width: 55%;"></div>
                         </div>
 
                         <strong>Digital Marketing</strong>
-                        <span class="pull-right"><i class="fa fa-rss"></i> <i class="fa fa-mobile"></i></span>
+                        <span class="pull-right"><i class="ni ni-spaceship"></i>></span>
                         <div class="progress">
                             <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuemin="0"
                                 aria-valuemax="100" style="width: 55%;"></div>
                         </div>
 
                         <strong>Content Management</strong>
-                        <span class="pull-right"><i class="fa fa-keyboard-o"></i> <i class="fa fa-mobile"></i></span>
+                        <span class="pull-right"><i class="ni ni-single-copy-04"></i>></span>
                         <div class="progress">
                             <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuemin="0"
                                 aria-valuemax="100" style="width: 55%;"></div>
@@ -237,8 +239,8 @@
                 </div>
 
                 <div class="col-md-4 col-sm-12">
-                    <div class="about-image">
-                        <img src="images/about-img.jpg" class="img-responsive" alt="My Picture">
+                    <div>
+                        <img src="images/about-img.jpg" class="img-responsive about-image" alt="My Picture">
                         <br /><br /><br /><br /><br /><br /><br /><br />
                     </div>
                 </div>
@@ -262,8 +264,6 @@
         </div>
     </div> -->
 
-    <hr />
-
     <!-- SERVICES -->
     <section id="service" data-stellar-background-ratio="0.5">
         <div class="container">
@@ -271,6 +271,7 @@
 
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title">
+                        <hr />
                         <br /><br /><br />
                         <h2>Services</h2>
                         <span class="line-bar">...</span>
@@ -283,7 +284,7 @@
                         <div class="media-body blog-info">
                             <img src="images/blog-image1.png" class="img-responsive" alt="">
                             <h3>Web Design</a></h3>
-                            <p>Responsive website development with great focus on user experience, optimization, speed
+                            <p>Responsive website development that automatically scales up and down to meet the needs of whatever screen size it's on with great focus on user experience, optimization, speed
                                 & security.</p>
                         </div>
                     </div>
@@ -307,7 +308,7 @@
                         <div class="media-body blog-info">
                             <img src="images/blog-image3.png" class="img-responsive" alt=""></a>
                             <h3>Wordpress CMS</a></h3>
-                            <p>Wordpress CMS is a user-friendly administrative area allowing you to easily edit &
+                            <p>Wordpress Content management system is a user-friendly administrative area allowing you to easily edit &
                                 manage your website's content.</p>
                         </div>
                     </div>
@@ -352,7 +353,7 @@
                         <div class="media-body blog-info">
                             <img src="images/blog-image7.png" class="img-responsive" alt=""></a>
                             <h3>Digital Marketing</a></h3>
-                            <p>Product/Brand promotion via several social media platforms leading to customers
+                            <p>Product/Brand promotion via several social and digital platforms leading to product boost and customers
                                 acqusition.</p>
                         </div>
                     </div>
@@ -364,15 +365,21 @@
                         <div class="media-body blog-info">
                             <img src="images/blog-image8.png" class="img-responsive" alt=""></a>
                             <h3>Search Engine Optimization</a></h3>
-                            <p>Improvment and promotion of websites search presence leading to increased number of
-                                visitors (Traffic).</p>
+                            <p>There's a lot of competition out there, so we ensure to include correct meta tagging & descriptions, open graphs and provide SEO training and strategy for each of our clients to ensure continous traffic count..</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <hr />
+
+<div class="col-md-12">
+    <div class="container">
+        <h3 style="text-align: center;"> 100% Satisfaction Guaranteed <i class="ni ni-satisfied"></i></h3> <br />
+<p> We don't bother you with up front deposits or lengthy contracts. If you're not happy with the website when all is said and done, we will work until you're happy.</p>
+    </div>
+</div>
+
 
     <!--BLOG SECTION-->
     <section id="articles" data-stellar-background-ratio="0.5">
@@ -381,6 +388,8 @@
 
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title">
+                        <br /><br /><br />
+                        <hr />
                         <br /><br /><br />
                         <h2>My Recent Articles</h2>
                         <span class="line-bar">...</span>
@@ -457,6 +466,7 @@
         </div>
         </div>
     </section>
+    <br /><br /><br />
     <hr />
 
     <div class="container">
@@ -605,6 +615,8 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title">
                         <br /><br /><br />
+                        <hr />
+                        <br /><br /><br />
                         <h2>Recent Projects</h2>
                         <span class="line-bar">...</span>
                     </div>
@@ -655,12 +667,12 @@
                 <div class="col-md-3 col-sm-6">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                        <a href="images/work-image4.png" class="image-popup">
-                            <img src="images/work-image4.png" class="img-responsive" alt="Work">
+                        <a href="images/work-image4.jpg" class="image-popup">
+                            <img src="images/work-image4.jpg" class="img-responsive" alt="Work">
 
                             <div class="work-info">
-                                <h3>MekaFind</h3>
-                                <small>Auto Mechanic Hub</small>
+                                <h3>ICA FULOKOJA</h3>
+                                <small>Ingressive Campus Community FULOKOJA Website.</small>
                             </div>
                         </a>
                     </div>
@@ -677,7 +689,6 @@
                     </div>
                 </div>
     </section>
-    <hr />
 
     <!-- TESTIMONIAL-->
     <section id="testimonial" data-stellar-background-ratio="0.5">
@@ -686,6 +697,8 @@
 
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title">
+                        <br /><br /><br />
+                        <hr />
                         <br /><br /><br />
                         <h2>My Testimonials</h2>
                         <span class="line-bar">...</span>
