--- a/resume.html
+++ b/resume.html
@@ -5,13 +5,43 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Resume - Bolaji Ayodeji">
+    <!-- Twitter Card-->
+    <meta name="twitter:title" content="BOLAJI - THE GEEK 🔥🚀">
+    <meta name="twitter:site" content="@iambolajiayodeji" />
+    <meta name="twitter:creator" content="@iambolajiayodeji" />
+    <meta name="twitter:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
+    <meta name="twitter:image" content="images/about-image.jpg">
+    <meta name="twitter:card" content="images/about-image.jpg">
+    <meta name="description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
+    <!-- Facebook card -->
+    <meta property="fb:admins" content="100018476377896" />
+    <meta property="fb:page_id" content="872194893169133" />
+    <!--Open Graph-->
+    <meta property="og:image" content="images/about-image.jpg">
+    <meta property="og:title" content="BOLAJI - THE GEEK 🔥🚀" />
+    <meta property="og:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security." />
     <meta name="author" content="Bolaji Ayodeji">
+    <meta property="og:url" content="https://bolajiayodeji.github.io" />
+    <meta property="og:site_name" content="BOLAJI - THE GEEK 🔥🚀" />
+    <meta property="og:type" content="Portfolio Website" />
+
+    <!-- Google Knowledge Graph card -->
+    <script type='application/ld+json'>
+            {
+              "@context": "http://www.schema.org",
+              "@type": "Software Developer",
+              "name": "Bolaji Ayodeji (@iambolajiayo)",
+              "url": "https://bolajiayodeji.github.io",
+              "logo": "https://bolajiayodeji.github.io/images/about-image.png",
+              "description": "I build and deploy software applications with great focus on stunning interface design, optimization and security."
+            } 
+		</script>
+
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="resume/img/fav.png">
 
-    <title>Resume - Bolaji Ayodeji</title>
+    <title>RESUME - BOLAJI AYODEJI</title>
 
     <!-- Bootstrap core CSS -->
     <link href="resume/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +50,7 @@
     <link href="resume/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="resume/vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="resume/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+    <link href="assets/nucleo/css/nucleo.css" rel="stylesheet" />
 
     <!-- Main Stylesheet -->
     <link href="resume/css/resume.min.css" rel="stylesheet">
@@ -32,36 +63,37 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Bolaji Ayodeji - The Geek</span>
+            <span class="d-block d-lg-none">Bolaji - The Geek</span>
             <span class="d-none d-lg-block">
                 <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="resume/img/profile.jpg" alt="">
             </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="ni-2x ni ni-bullet-list-67"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about"><i class="fa fa-user"></i> About Me</a>
+                    <a class="nav-link js-scroll-trigger" href="#about"><i class="ni ni-circle-08"></i> About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#experience"><i class="fa fa-briefcase"></i> Experience</a>
+                    <a class="nav-link js-scroll-trigger" href="#experience"><i class="ni ni-briefcase-24"></i>
+                        Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#education"><i class="fa fa-graduation-cap"></i>
+                    <a class="nav-link js-scroll-trigger" href="#education"><i class="ni ni-hat-3"></i>
                         Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#skills"><i class="fa fa-code"></i> Skills</a>
+                    <a class="nav-link js-scroll-trigger" href="#skills"><i class="ni ni-bulb-61"></i> Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#interests"> <i class="fa fa-handshake-o"></i>
+                    <a class="nav-link js-scroll-trigger" href="#interests"> <i class="ni ni-like2"></i>
                         Interests</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#awards"> <i class="fa fa-certificate"></i> Awards</a>
+                    <a class="nav-link js-scroll-trigger" href="#awards"> <i class="ni ni-tag"></i> Awards</a>
                 </li>
             </ul>
         </div>
@@ -70,6 +102,7 @@
     <!--Main Content -->
     <br />
     <div>
+        <br />
         <p>
             <a href="https://bolajiayodeji.github.io/">&nbsp;<i class="fa fa-arrow-left"></i>Go Back Home</a>
         </p>
@@ -81,12 +114,12 @@
                 <h1 class="mb-0">Bolaji
                     <span class="text-big">Ayodeji</span>
                 </h1>
-                <div class="subheading mb-5">Nigeria | <a href=""><i class="fa fa-phone"></i>
-                        (+234) 8109445504</a> |
+                <div class="subheading mb-5"> <a href="tel:08109445504"><i class="fa fa-phone"></i>
+                        [+234] 8109445504</a> |
                     <a href="mailto:mailtobolaji@gmail.com"><i class="fa fa-envelope"></i> mailtobolaji@gmail.com</a>
                 </div>
-                <p class="mb-5 caption">I'm a Tech Geek, Front-end Developer, Favcoder, Photographer &amp; Content
-                    Writer.</p>
+                <p class="mb-5 caption">I'm passionate about developing and designing brilliant innovative products.
+                </p>
                 <ul class="list-inline list-social-icons mb-0">
                     <li class="list-inline-item">
                         <a href="https://facebook.com/iambolajiayo">
@@ -159,6 +192,23 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
             <div class="my-auto">
                 <h2 class="mb-5">Experience</h2>
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
+                        <h3 class="mb-0">Campus Ambassador</h3>
+                        <div class="subheading mb-3">Ingressive</div>
+                        <p>Ingressive Campus Ambassadors are individuals across various  institutions all over Nigeria
+                            passionate about building the tech  community on their campuses. They work together to
+                            build an active  community of tech enthusiasts by doing what they can to create a  positive
+                            experience for all members. This program is primarily  sponsored by our partners e.g
+                            GitHub, Figma, hence, Ingressive  Campus Ambassadors make use of their tools and encourage 
+                            members of their communities to do the same as they build amazing  projects leveraging on
+                            partner platforms.  </p>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">October 2018 - Present</span>
+                    </div>
+                </div>
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
@@ -399,6 +449,7 @@
 
     <!--Footer Section-->
     <footer class="text-center">
+        <br />
         <p> <i class="fa fa-code"></i> with <i class="fa fa-heart text-danger"></i> &amp; <i class="fa fa-coffee text-secondary"></i>
             by <a href="https://bolajiayodeji.github.io">Bolaji Ayodeji</a></p>
     </footer>
